# SPbSUT-CPP

./: README.md
lab0.8/: CMakeLists.txt  laba7.docx  mainwindow.cpp  mainwindow.h  mainwindow.ui
laba0.1/: lab1.docx  laba1  laba1.cpp
laba0.1/laba1.dSYM/Contents/Resources/DWARF/: laba1
laba0.1/laba1.dSYM/Contents/Resources/Relocations/aarch64/: laba1.yml
laba0.2/: lab2.docx  laba2  laba2.cpp
laba0.2/laba2.dSYM/Contents/Resources/DWARF/: laba2
laba0.2/laba2.dSYM/Contents/Resources/Relocations/aarch64/: laba2.yml
laba0.3/: laba3  laba3.cpp  laba3.docx
laba0.3/laba3.dSYM/Contents/: Info.plist
laba0.3/laba3.dSYM/Contents/Resources/DWARF/: laba3
laba0.3/laba3.dSYM/Contents/Resources/Relocations/aarch64/: laba3.yml
laba0.4/: laba4  laba4.cpp  laba4.docx
laba0.4/laba4.dSYM/Contents/Resources/DWARF/: laba4
laba0.4/laba4.dSYM/Contents/Resources/Relocations/aarch64/: laba4.yml
laba0.5/: laba5  laba5.cpp  laba5.docx
laba0.5/laba5.dSYM/Contents/Resources/DWARF/: laba5
laba0.5/laba5.dSYM/Contents/Resources/Relocations/aarch64/: laba5.yml
laba0.6/: Monitor.cpp  Monitor.h  PeripheralDevice.cpp  PeripheralDevice.h  Printer.cpp  Printer.h  laba6.docx  main  main.cpp  ~$laba6.docx
laba0.6/main.dSYM/Contents/Resources/DWARF/: main
laba0.6/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
